# nix_stat

./: Cargo.toml  README.md  deploy_nix_stat.sh  module.nix  test-config.nix
.github/workflows/: ci.yml
src/: lib.rs  main.rs
templates/: index.html
tests/: disk_io.rs  json_deser.rs  tailscale_status_peer_user.json
