[package]
name = "nix_stat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3"
axum = { version = "0.8.4", default-features = false, features = ["json", "tokio", "http1"] }
jiff = { version = "0.2.15", default-features = false, features = ["std" ,"serde"] }
rustix = { version = "1.0", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47", features = ["full"] }
xshell = "0.2.7"
